editor: Fixed game editor for new games

--- a/backend/editor/templates/editor/edit_game.html
+++ b/backend/editor/templates/editor/edit_game.html
@@ -38,6 +38,7 @@
 
 {% block extrabody %}
     <script>
+        window.gameid = null;
         {% if game %}
         window.gameid = {{ game.pk }};
         {% endif %}
