--- a/backend/editor/templates/editor/edit_game.html
+++ b/backend/editor/templates/editor/edit_game.html
@@ -21,6 +21,8 @@
         }
     </style>
     <link href="//cdn.jsdelivr.net/openlayers.geocoder/latest/ol3-geocoder.min.css" rel="stylesheet">
+
+    <meta name="csrf-token" content="{{ csrf_token }}">
 {% endblock %}
 
 {% block head %}
