--- a/backend/editor/static/gameeditor.css
+++ b/backend/editor/static/gameeditor.css
@@ -16,4 +16,24 @@
   width: 100%;
   height: 500px;
   display: block;
+  border: 1px solid #aaa;
+  background-color: #efefef;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.selected {
+    border: 2px dashed red;
+}
+
+.selected .panel-heading {
+    background-color: #ffaaaa;
+}
+
+.selected2 {
+    border: 2px dashed blue;
+}
+
+.selected2 .panel-heading {
+    background-color: #aaaaff;
 }
