frontend: Using leaflet for maps instead of openlayers

--- a/frontend/styles/external.less
+++ b/frontend/styles/external.less
@@ -4,4 +4,6 @@
 @import (less) "../node_modules/alertifyjs/build/css/alertify.min.css";
 @import (less) "../node_modules/alertifyjs/build/css/themes/bootstrap.min.css";
 
+@import (less) "../node_modules/leaflet/dist/leaflet.css";
+
 @fa-font-path: "fonts";
