--- a/frontend/styles/map.less
+++ b/frontend/styles/map.less
@@ -38,6 +38,10 @@
 
 #center-button {
     position: fixed;
-    top: 100px;
+    top: 60px;
     right: 10px;
+}
+
+#socializa-map {
+    z-index: 0;
 }
