--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,15 @@
 
     <ScrollView
         android:id="@+id/layoutScroll"
-        android:layout_width="384dp"
-        android:layout_height="511dp" >
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:id="@+id/layoutLinearScroll"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="visible"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="visible">
 
             <ImageView
                 android:id="@+id/imgApp"
@@ -30,12 +30,12 @@
                 android:id="@+id/textApp"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_marginTop="8dp"
                 android:text="@string/app_name"
                 android:textAlignment="center"
-                android:textSize="24sp"
-                android:layout_marginTop="8dp"
                 android:textAllCaps="true"
                 android:textColor="@color/colorAccent"
+                android:textSize="24sp"
                 android:visibility="visible" />
 
             <TableRow
