Added service and client for http petitions (login and register form are working). Added registerActivity

--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.wadobo.socializa.MainActivity">
+    tools:context="com.wadobo.socializa.LoginActivity">
 
     <ScrollView
         android:id="@+id/layoutScroll"
@@ -116,6 +116,17 @@
                     android:backgroundTint="@color/colorPrimary"
                     android:text="@string/login"
                     android:textColor="#ffffff" />
+
+                <Button
+                    android:id="@+id/btnGotoRegister"
+                    style="@style/Widget.AppCompat.Button.Small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Go to register"
+                    android:textAlignment="center"
+                    android:layout_gravity="right"
+                    android:layout_marginRight="8dp"
+                    android:textAllCaps="false" />
             </LinearLayout>
         </LinearLayout>
 
